codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_whole_status.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "whole_status.replace(&directory,\n\"[[workspace]]\").replace(crate::version::CODEX_CLI_VERSION, \"VERSION\")"
---
>_ OpenAI Codex (vVERSION)

  Model:               GPT-5.5 (reasoning medium, summaries auto)
  Model provider:      openai
  Directory:           [[workspace]]
  Permissions:         Read Only (Ask for approval)
  Agents.md:           <none>
  Thread name:         Clipboard example
  Collaboration mode:  Default
  Session:             00000000-0000-0000-0000-000000000123

  Token usage:         0 total  (0 input + 0 output)
  Limits:              data not available yet
